This is a record of changes to SerialEM since it was first publicly released.

* marks changes or enhancements noticeable to the user, or items of particular
significance, for the stable release version
============================================================================
3/12/21: Fixed getting tilt sums during frame series when there is an energy
filter (In 3.8).

3/5/21: Added 64-bit HDF library for v140 64-bit build only; to run this
build, copy SerialEMLibs/x64/hdf5-14.dll to the executable directory or
somewhere on the path and rename it hdf5.dll.

3/5/21: Added a script command to present user with three choices.

3/2/21: Made changes to allow scripting to be done with an external script
interpreter embedded in a plugin.

3/2/21: Changed shifts for ReplaceFrameTSShifts to be in specimen coordinates
(In 3.8).

2/23/21: Added camera property to set delay from setting intensity to starting
acquisition.

2/22/21: Added options to use Search area to Autofocus script command.

2/22/21: SEM_3-8-7
2/22/21: Added button to Hole Finder to toggle display of points while button
is pressed.

2/22/21: Added ability to open script editor windows with a right click on the
button in the script toolbar or Camera and Script Tools panel.

2/22/21: Replaced colored borders for buttons with colored backgrounds.

2/22/21: Fixed using OneView with drift correction and float images (In 3.8).

2/18/21: Assigned the current stage backlash, if any, to an image shift
montage so that a map made from it would have backlash (In 3.8).

2/16/21: Added script command to report the number of holes and Navigator
points that would be acquired by MultipleRecords using only points that 
include a specified minimum number of holes.  ReportNavItem also sets a
variable for the number of holes that would be acquired for one item.

2/16/21: Made excluded points in the hole finder be colored light or dark blue
depending on which mean cutoff they exceeded.

2/11/21: SEM_3-9-0beta4