@@ -3,6 +3,8 @@ This is a record of changes to SerialEM since it was first publicly released.
 * marks changes or enhancements noticeable to the user, or items of particular
 significance, for the stable release version
 ============================================================================
+3/14/21: Allowed scale bar to be drawn on many processed images (In 3.8).
+
 3/12/21: Fixed getting tilt sums during frame series when there is an energy
 filter (In 3.8).
 
